hd size is ready

--- a/includes/loyalty.jade
+++ b/includes/loyalty.jade
@@ -7,4 +7,4 @@ mixin loyalty()
 				|Пятерочки в любом магазине сети и покупайте дешевле.
 			.loyalty__image
 				img(src='../img/svg/logo.svg')
-			a(href='#').btn._lg.loaylty__link Зарегистрировать карту
+			a(href='#').btn._lg.loyalty__link Зарегистрировать карту
