--- a/scss/components/shops.scss
+++ b/scss/components/shops.scss
@@ -8,7 +8,7 @@
 
 	&__title {
 		padding-left: 130px;
-		@include font-an-bold();
+		@include font-an-med();
 		font-size: 123px;
 		line-height: 1em;
 		color: #fff;
