--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -31,8 +31,9 @@
 			&:after {
 				content: '';
 				position: absolute;
-				top: 0;
+				top: 50%;
 				right: 0;
+				margin-top: -6px;
 				width: 7px;
 				height: 7px;
 				border-bottom: 2px solid $vivid-tangerine;
