--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import "plugins/slick";
 
 //base
+@import 'components/mixins';
 @import 'components/fonts';
 @import 'components/general';
 @import 'components/sprite';
