--- a/scss/components/_recipe.scss
+++ b/scss/components/_recipe.scss
@@ -130,4 +130,45 @@
 		text-align: center;
 		transition: all .25s;
 	}
+
+	@include max-width($md) {
+		padding: 0 18px 47px;
+		min-height: 356px;
+
+		&__image {
+			height: 178px;
+			margin: 0 -18px 15px;
+		}
+
+		&__price {
+			width: 65px;
+			height: 65px;
+			margin-top: -63px;
+			font-size: 20px;
+			line-height: 65px;
+		}
+
+		&__type {
+			margin-bottom: 5px;
+			font-size: 14px;
+
+			&:before {
+				margin-right: 2px;
+			}
+		}
+
+		&__title {
+			margin-bottom: 16px;
+			font-size: 20px;
+		}
+
+		&__time {
+			font-size: 16px;
+		}
+
+		&__action {
+			font-size: 16px;
+			line-height: 46px;
+		}
+	}
 }
