adaptivity is ready

--- a/includes/header.jade
+++ b/includes/header.jade
@@ -1,6 +1,6 @@
 mixin header()
 	.header
-		.header__up
+		.header__up._show
 			.container
 				.columns
 					.columns__item-1.header__city
@@ -24,3 +24,4 @@ mixin header()
 					.columns__item-1.header__buttons
 						a(href='#').header__search
 						a(href='#').btn.header__enter Войти
+					a(href='#').header__sandwich.js-sandwich
