--- a/includes/recipes.jade
+++ b/includes/recipes.jade
@@ -3,7 +3,7 @@ mixin recipes()
 		.container
 			a(href='#').recipes__link 340 рецептов
 			.recipes__title Наши рецепты
-			#recipes.columns.resipes__list.js-slider(data-slides='3')
+			#recipes.columns.resipes__list.js-slider(data-slides='3', data-dots='false')
 				-
 					list = [
 						{
