--- a/includes/trademarks.jade
+++ b/includes/trademarks.jade
@@ -1,7 +1,7 @@
 mixin trademarks()
 	.trademarks
 		.container
-			#trademarks.columns.trademarks__list.js-slider(data-slides='6')
+			#trademarks.columns.trademarks__list.js-slider(data-slides='6', data-slides-sm='3', data-dots='false')
 				-var i = 0
 				while i < 6
 					.columns__item-1.trademarks__item.js-slider-item(class='#{i == "5" ? "_number" : ""}')
