--- a/scss/components/_btn.scss
+++ b/scss/components/_btn.scss
@@ -22,4 +22,16 @@
 		line-height: 56px;
 		border-radius: 28px;
 	}
+
+	@include max-width($sm) {
+
+		&._lg {
+			height: 80px;
+			width: 100%;
+			box-sizing: border-box;
+			font-size: 28px;
+			line-height: 76px;
+			border-radius: 38px;
+		}
+	}
 }
