--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -8,6 +8,10 @@
 		display: inline-block;
 		vertical-align: top;
 		margin-right: 51px;
+
+		&:last-child {
+			margin-right: 0;
+		}
 	}
 
 	&__link {
@@ -16,5 +20,17 @@
 
 	@include max-width($md) {
 		padding-left: 67px;
+	}
+
+	@include max-width($sm) {
+		padding-left: 0;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+
+		&__link {
+			@include font-an-med();
+			font-size: 28px;
+		}
 	}
 }
