--- a/scss/components/_recipe.scss
+++ b/scss/components/_recipe.scss
@@ -171,4 +171,53 @@
 			line-height: 46px;
 		}
 	}
+
+	@include max-width($sm) {
+		padding: 0 32px 97px;
+		min-height: 672px;
+		border-radius: 15px;
+
+		&__image {
+			margin: 0 -32px 34px;
+			height: 336px;
+			border-radius: 15px 15px 0 0;
+		}
+
+		&__price {
+			margin-top: -130px;
+			width: 128px;
+			height: 128px;
+			font-size: 38px;
+			line-height: 128px;
+		}
+
+		&__type {
+			margin-bottom: 22px;
+			font-size: 22px;
+
+			&:before {
+				margin-right: 6px;
+			}
+		}
+
+		&__title {
+			margin-bottom: 20px;
+			font-size: 32px;
+		}
+
+		&__time {
+			padding-left: 28px;
+			font-size: 24px;
+
+			&:before {
+				margin-top: -$time-sm-height / 2;
+				@include sprite($time-sm);
+			}
+		}
+
+		&__action {
+			font-size: 24px;
+			line-height: 96px;
+		}
+	}
 }
