--- a/scss/components/_slick-dots.scss
+++ b/scss/components/_slick-dots.scss
@@ -17,7 +17,7 @@
 		border: 2px solid #e4dacf;
 		border-radius: 50%;
 		box-sizing: border-box;
-		background: #fff;
+		background: transparent;
 		cursor: pointer;
 
 		&:last-child {
@@ -35,6 +35,16 @@
 		&.slick-active {
 			border: 2px solid #ec2e2e;
 			background: #ec2e2e;
+		}
+	}
+
+	@include max-width($sm) {
+		bottom: 121px;
+		left: 22px;
+		transform: none;
+
+		li {
+			border-color: #c2ac98;
 		}
 	}
 }
