--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -21,7 +21,7 @@
 }
 
 %products-text {
-	@include font-pts-reg();
+	@include font-an-reg();
 	font-size: 20px;
 	line-height: 1.2em;
 	color: #000;
