--- a/scss/components/_columns.scss
+++ b/scss/components/_columns.scss
@@ -1,18 +1,26 @@
 .columns {
-	margin: 0 -27px;
-	@extend .clearfix;
 
-	@for $i from 1 through 6 {
+	&:after {
+		content: '';
+		display: table;
+		clear: both;
+	}
 
-		&__item-#{$i} {
-			float: left;
-			width: 1 / 6 * $i * 100%;
-			padding: 0 27px;
-			box-sizing: border-box;
+	@media (min-width: 1024px) {
+		margin: 0 -27px;
+
+		@for $i from 1 through 6 {
+
+			&__item-#{$i} {
+				float: left;
+				width: 1 / 6 * $i * 100%;
+				padding: 0 27px;
+				box-sizing: border-box;
+			}
 		}
 	}
 
-	@include max-width($md) {
+	@media (max-width: 1365px) and (min-width: 1024px) {
 
 		margin: 0 -15px;
 
