--- a/scss/components/_sprite.scss
+++ b/scss/components/_sprite.scss
@@ -10,82 +10,126 @@
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
 $breakfast-name: 'breakfast';
-$breakfast-x: 0px;
-$breakfast-y: 199px;
-$breakfast-offset-x: 0px;
-$breakfast-offset-y: -199px;
+$breakfast-x: 82px;
+$breakfast-y: 247px;
+$breakfast-offset-x: -82px;
+$breakfast-offset-y: -247px;
 $breakfast-width: 20px;
 $breakfast-height: 30px;
-$breakfast-total-width: 292px;
-$breakfast-total-height: 229px;
+$breakfast-total-width: 304px;
+$breakfast-total-height: 283px;
 $breakfast-image: 'sprite.png';
-$breakfast: (0px, 199px, 0px, -199px, 20px, 30px, 292px, 229px, 'sprite.png', 'breakfast', );
+$breakfast: (82px, 247px, -82px, -247px, 20px, 30px, 304px, 283px, 'sprite.png', 'breakfast', );
 $city-name: 'city';
-$city-x: 20px;
-$city-y: 199px;
-$city-offset-x: -20px;
-$city-offset-y: -199px;
+$city-x: 292px;
+$city-y: 0px;
+$city-offset-x: -292px;
+$city-offset-y: 0px;
 $city-width: 12px;
 $city-height: 16px;
-$city-total-width: 292px;
-$city-total-height: 229px;
+$city-total-width: 304px;
+$city-total-height: 283px;
 $city-image: 'sprite.png';
-$city: (20px, 199px, -20px, -199px, 12px, 16px, 292px, 229px, 'sprite.png', 'city', );
+$city: (292px, 0px, -292px, 0px, 12px, 16px, 304px, 283px, 'sprite.png', 'city', );
 $complex-name: 'complex';
-$complex-x: 196px;
-$complex-y: 128px;
-$complex-offset-x: -196px;
-$complex-offset-y: -128px;
+$complex-x: 148px;
+$complex-y: 219px;
+$complex-offset-x: -148px;
+$complex-offset-y: -219px;
 $complex-width: 33px;
 $complex-height: 22px;
-$complex-total-width: 292px;
-$complex-total-height: 229px;
+$complex-total-width: 304px;
+$complex-total-height: 283px;
 $complex-image: 'sprite.png';
-$complex: (196px, 128px, -196px, -128px, 33px, 22px, 292px, 229px, 'sprite.png', 'complex', );
+$complex: (148px, 219px, -148px, -219px, 33px, 22px, 304px, 283px, 'sprite.png', 'complex', );
+$logo-grey-sm-name: 'logo-grey-sm';
+$logo-grey-sm-x: 0px;
+$logo-grey-sm-y: 171px;
+$logo-grey-sm-offset-x: 0px;
+$logo-grey-sm-offset-y: -171px;
+$logo-grey-sm-width: 249px;
+$logo-grey-sm-height: 48px;
+$logo-grey-sm-total-width: 304px;
+$logo-grey-sm-total-height: 283px;
+$logo-grey-sm-image: 'sprite.png';
+$logo-grey-sm: (0px, 171px, 0px, -171px, 249px, 48px, 304px, 283px, 'sprite.png', 'logo-grey-sm', );
 $logo-grey-name: 'logo-grey';
 $logo-grey-x: 0px;
-$logo-grey-y: 171px;
+$logo-grey-y: 219px;
 $logo-grey-offset-x: 0px;
-$logo-grey-offset-y: -171px;
+$logo-grey-offset-y: -219px;
 $logo-grey-width: 148px;
 $logo-grey-height: 28px;
-$logo-grey-total-width: 292px;
-$logo-grey-total-height: 229px;
+$logo-grey-total-width: 304px;
+$logo-grey-total-height: 283px;
 $logo-grey-image: 'sprite.png';
-$logo-grey: (0px, 171px, 0px, -171px, 148px, 28px, 292px, 229px, 'sprite.png', 'logo-grey', );
+$logo-grey: (0px, 219px, 0px, -219px, 148px, 28px, 304px, 283px, 'sprite.png', 'logo-grey', );
+$loupe-sm-name: 'loupe-sm';
+$loupe-sm-x: 196px;
+$loupe-sm-y: 128px;
+$loupe-sm-offset-x: -196px;
+$loupe-sm-offset-y: -128px;
+$loupe-sm-width: 40px;
+$loupe-sm-height: 38px;
+$loupe-sm-total-width: 304px;
+$loupe-sm-total-height: 283px;
+$loupe-sm-image: 'sprite.png';
+$loupe-sm: (196px, 128px, -196px, -128px, 40px, 38px, 304px, 283px, 'sprite.png', 'loupe-sm', );
 $loupe-name: 'loupe';
-$loupe-x: 229px;
-$loupe-y: 128px;
-$loupe-offset-x: -229px;
-$loupe-offset-y: -128px;
+$loupe-x: 150px;
+$loupe-y: 247px;
+$loupe-offset-x: -150px;
+$loupe-offset-y: -247px;
 $loupe-width: 21px;
 $loupe-height: 20px;
-$loupe-total-width: 292px;
-$loupe-total-height: 229px;
+$loupe-total-width: 304px;
+$loupe-total-height: 283px;
 $loupe-image: 'sprite.png';
-$loupe: (229px, 128px, -229px, -128px, 21px, 20px, 292px, 229px, 'sprite.png', 'loupe', );
+$loupe: (150px, 247px, -150px, -247px, 21px, 20px, 304px, 283px, 'sprite.png', 'loupe', );
 $mailru-hover-name: 'mailru-hover';
-$mailru-hover-x: 250px;
-$mailru-hover-y: 128px;
-$mailru-hover-offset-x: -250px;
-$mailru-hover-offset-y: -128px;
+$mailru-hover-x: 171px;
+$mailru-hover-y: 247px;
+$mailru-hover-offset-x: -171px;
+$mailru-hover-offset-y: -247px;
 $mailru-hover-width: 20px;
 $mailru-hover-height: 20px;
-$mailru-hover-total-width: 292px;
-$mailru-hover-total-height: 229px;
+$mailru-hover-total-width: 304px;
+$mailru-hover-total-height: 283px;
 $mailru-hover-image: 'sprite.png';
-$mailru-hover: (250px, 128px, -250px, -128px, 20px, 20px, 292px, 229px, 'sprite.png', 'mailru-hover', );
+$mailru-hover: (171px, 247px, -171px, -247px, 20px, 20px, 304px, 283px, 'sprite.png', 'mailru-hover', );
+$mailru-sm-hover-name: 'mailru-sm-hover';
+$mailru-sm-hover-x: 249px;
+$mailru-sm-hover-y: 171px;
+$mailru-sm-hover-offset-x: -249px;
+$mailru-sm-hover-offset-y: -171px;
+$mailru-sm-hover-width: 36px;
+$mailru-sm-hover-height: 36px;
+$mailru-sm-hover-total-width: 304px;
+$mailru-sm-hover-total-height: 283px;
+$mailru-sm-hover-image: 'sprite.png';
+$mailru-sm-hover: (249px, 171px, -249px, -171px, 36px, 36px, 304px, 283px, 'sprite.png', 'mailru-sm-hover', );
+$mailru-sm-name: 'mailru-sm';
+$mailru-sm-x: 0px;
+$mailru-sm-y: 247px;
+$mailru-sm-offset-x: 0px;
+$mailru-sm-offset-y: -247px;
+$mailru-sm-width: 36px;
+$mailru-sm-height: 36px;
+$mailru-sm-total-width: 304px;
+$mailru-sm-total-height: 283px;
+$mailru-sm-image: 'sprite.png';
+$mailru-sm: (0px, 247px, 0px, -247px, 36px, 36px, 304px, 283px, 'sprite.png', 'mailru-sm', );
 $mailru-name: 'mailru';
-$mailru-x: 270px;
-$mailru-y: 128px;
-$mailru-offset-x: -270px;
-$mailru-offset-y: -128px;
+$mailru-x: 191px;
+$mailru-y: 247px;
+$mailru-offset-x: -191px;
+$mailru-offset-y: -247px;
 $mailru-width: 20px;
 $mailru-height: 20px;
-$mailru-total-width: 292px;
-$mailru-total-height: 229px;
+$mailru-total-width: 304px;
+$mailru-total-height: 283px;
 $mailru-image: 'sprite.png';
-$mailru: (270px, 128px, -270px, -128px, 20px, 20px, 292px, 229px, 'sprite.png', 'mailru', );
+$mailru: (191px, 247px, -191px, -247px, 20px, 20px, 304px, 283px, 'sprite.png', 'mailru', );
 $marker-name: 'marker';
 $marker-x: 196px;
 $marker-y: 0px;
@@ -93,32 +137,54 @@ $marker-offset-x: -196px;
 $marker-offset-y: 0px;
 $marker-width: 96px;
 $marker-height: 128px;
-$marker-total-width: 292px;
-$marker-total-height: 229px;
+$marker-total-width: 304px;
+$marker-total-height: 283px;
 $marker-image: 'sprite.png';
-$marker: (196px, 0px, -196px, 0px, 96px, 128px, 292px, 229px, 'sprite.png', 'marker', );
+$marker: (196px, 0px, -196px, 0px, 96px, 128px, 304px, 283px, 'sprite.png', 'marker', );
 $ok-hover-name: 'ok-hover';
-$ok-hover-x: 174px;
-$ok-hover-y: 171px;
-$ok-hover-offset-x: -174px;
-$ok-hover-offset-y: -171px;
+$ok-hover-x: 278px;
+$ok-hover-y: 128px;
+$ok-hover-offset-x: -278px;
+$ok-hover-offset-y: -128px;
 $ok-hover-width: 12px;
 $ok-hover-height: 22px;
-$ok-hover-total-width: 292px;
-$ok-hover-total-height: 229px;
+$ok-hover-total-width: 304px;
+$ok-hover-total-height: 283px;
 $ok-hover-image: 'sprite.png';
-$ok-hover: (174px, 171px, -174px, -171px, 12px, 22px, 292px, 229px, 'sprite.png', 'ok-hover', );
+$ok-hover: (278px, 128px, -278px, -128px, 12px, 22px, 304px, 283px, 'sprite.png', 'ok-hover', );
+$ok-sm-hover-name: 'ok-sm-hover';
+$ok-sm-hover-x: 36px;
+$ok-sm-hover-y: 247px;
+$ok-sm-hover-offset-x: -36px;
+$ok-sm-hover-offset-y: -247px;
+$ok-sm-hover-width: 23px;
+$ok-sm-hover-height: 36px;
+$ok-sm-hover-total-width: 304px;
+$ok-sm-hover-total-height: 283px;
+$ok-sm-hover-image: 'sprite.png';
+$ok-sm-hover: (36px, 247px, -36px, -247px, 23px, 36px, 304px, 283px, 'sprite.png', 'ok-sm-hover', );
+$ok-sm-name: 'ok-sm';
+$ok-sm-x: 59px;
+$ok-sm-y: 247px;
+$ok-sm-offset-x: -59px;
+$ok-sm-offset-y: -247px;
+$ok-sm-width: 23px;
+$ok-sm-height: 36px;
+$ok-sm-total-width: 304px;
+$ok-sm-total-height: 283px;
+$ok-sm-image: 'sprite.png';
+$ok-sm: (59px, 247px, -59px, -247px, 23px, 36px, 304px, 283px, 'sprite.png', 'ok-sm', );
 $ok-name: 'ok';
-$ok-x: 186px;
-$ok-y: 171px;
-$ok-offset-x: -186px;
-$ok-offset-y: -171px;
+$ok-x: 211px;
+$ok-y: 247px;
+$ok-offset-x: -211px;
+$ok-offset-y: -247px;
 $ok-width: 12px;
 $ok-height: 20px;
-$ok-total-width: 292px;
-$ok-total-height: 229px;
+$ok-total-width: 304px;
+$ok-total-height: 283px;
 $ok-image: 'sprite.png';
-$ok: (186px, 171px, -186px, -171px, 12px, 20px, 292px, 229px, 'sprite.png', 'ok', );
+$ok: (211px, 247px, -211px, -247px, 12px, 20px, 304px, 283px, 'sprite.png', 'ok', );
 $price-bg-name: 'price-bg';
 $price-bg-x: 0px;
 $price-bg-y: 0px;
@@ -126,59 +192,103 @@ $price-bg-offset-x: 0px;
 $price-bg-offset-y: 0px;
 $price-bg-width: 196px;
 $price-bg-height: 171px;
-$price-bg-total-width: 292px;
-$price-bg-total-height: 229px;
+$price-bg-total-width: 304px;
+$price-bg-total-height: 283px;
 $price-bg-image: 'sprite.png';
-$price-bg: (0px, 0px, 0px, 0px, 196px, 171px, 292px, 229px, 'sprite.png', 'price-bg', );
+$price-bg: (0px, 0px, 0px, 0px, 196px, 171px, 304px, 283px, 'sprite.png', 'price-bg', );
+$sandwich-name: 'sandwich';
+$sandwich-x: 236px;
+$sandwich-y: 128px;
+$sandwich-offset-x: -236px;
+$sandwich-offset-y: -128px;
+$sandwich-width: 42px;
+$sandwich-height: 32px;
+$sandwich-total-width: 304px;
+$sandwich-total-height: 283px;
+$sandwich-image: 'sprite.png';
+$sandwich: (236px, 128px, -236px, -128px, 42px, 32px, 304px, 283px, 'sprite.png', 'sandwich', );
+$time-sm-name: 'time-sm';
+$time-sm-x: 128px;
+$time-sm-y: 247px;
+$time-sm-offset-x: -128px;
+$time-sm-offset-y: -247px;
+$time-sm-width: 22px;
+$time-sm-height: 22px;
+$time-sm-total-width: 304px;
+$time-sm-total-height: 283px;
+$time-sm-image: 'sprite.png';
+$time-sm: (128px, 247px, -128px, -247px, 22px, 22px, 304px, 283px, 'sprite.png', 'time-sm', );
 $time-name: 'time';
-$time-x: 198px;
-$time-y: 171px;
-$time-offset-x: -198px;
-$time-offset-y: -171px;
+$time-x: 223px;
+$time-y: 247px;
+$time-offset-x: -223px;
+$time-offset-y: -247px;
 $time-width: 15px;
 $time-height: 15px;
-$time-total-width: 292px;
-$time-total-height: 229px;
+$time-total-width: 304px;
+$time-total-height: 283px;
 $time-image: 'sprite.png';
-$time: (198px, 171px, -198px, -171px, 15px, 15px, 292px, 229px, 'sprite.png', 'time', );
+$time: (223px, 247px, -223px, -247px, 15px, 15px, 304px, 283px, 'sprite.png', 'time', );
 $vegetarian-name: 'vegetarian';
-$vegetarian-x: 148px;
-$vegetarian-y: 171px;
-$vegetarian-offset-x: -148px;
-$vegetarian-offset-y: -171px;
+$vegetarian-x: 102px;
+$vegetarian-y: 247px;
+$vegetarian-offset-x: -102px;
+$vegetarian-offset-y: -247px;
 $vegetarian-width: 26px;
 $vegetarian-height: 23px;
-$vegetarian-total-width: 292px;
-$vegetarian-total-height: 229px;
+$vegetarian-total-width: 304px;
+$vegetarian-total-height: 283px;
 $vegetarian-image: 'sprite.png';
-$vegetarian: (148px, 171px, -148px, -171px, 26px, 23px, 292px, 229px, 'sprite.png', 'vegetarian', );
+$vegetarian: (102px, 247px, -102px, -247px, 26px, 23px, 304px, 283px, 'sprite.png', 'vegetarian', );
 $vk-hover-name: 'vk-hover';
-$vk-hover-x: 196px;
-$vk-hover-y: 150px;
-$vk-hover-offset-x: -196px;
-$vk-hover-offset-y: -150px;
+$vk-hover-x: 245px;
+$vk-hover-y: 219px;
+$vk-hover-offset-x: -245px;
+$vk-hover-offset-y: -219px;
 $vk-hover-width: 22px;
 $vk-hover-height: 13px;
-$vk-hover-total-width: 292px;
-$vk-hover-total-height: 229px;
+$vk-hover-total-width: 304px;
+$vk-hover-total-height: 283px;
 $vk-hover-image: 'sprite.png';
-$vk-hover: (196px, 150px, -196px, -150px, 22px, 13px, 292px, 229px, 'sprite.png', 'vk-hover', );
+$vk-hover: (245px, 219px, -245px, -219px, 22px, 13px, 304px, 283px, 'sprite.png', 'vk-hover', );
+$vk-sm-hover-name: 'vk-sm-hover';
+$vk-sm-hover-x: 181px;
+$vk-sm-hover-y: 219px;
+$vk-sm-hover-offset-x: -181px;
+$vk-sm-hover-offset-y: -219px;
+$vk-sm-hover-width: 32px;
+$vk-sm-hover-height: 19px;
+$vk-sm-hover-total-width: 304px;
+$vk-sm-hover-total-height: 283px;
+$vk-sm-hover-image: 'sprite.png';
+$vk-sm-hover: (181px, 219px, -181px, -219px, 32px, 19px, 304px, 283px, 'sprite.png', 'vk-sm-hover', );
+$vk-sm-name: 'vk-sm';
+$vk-sm-x: 213px;
+$vk-sm-y: 219px;
+$vk-sm-offset-x: -213px;
+$vk-sm-offset-y: -219px;
+$vk-sm-width: 32px;
+$vk-sm-height: 19px;
+$vk-sm-total-width: 304px;
+$vk-sm-total-height: 283px;
+$vk-sm-image: 'sprite.png';
+$vk-sm: (213px, 219px, -213px, -219px, 32px, 19px, 304px, 283px, 'sprite.png', 'vk-sm', );
 $vk-name: 'vk';
-$vk-x: 218px;
-$vk-y: 150px;
-$vk-offset-x: -218px;
-$vk-offset-y: -150px;
+$vk-x: 267px;
+$vk-y: 219px;
+$vk-offset-x: -267px;
+$vk-offset-y: -219px;
 $vk-width: 22px;
 $vk-height: 13px;
-$vk-total-width: 292px;
-$vk-total-height: 229px;
+$vk-total-width: 304px;
+$vk-total-height: 283px;
 $vk-image: 'sprite.png';
-$vk: (218px, 150px, -218px, -150px, 22px, 13px, 292px, 229px, 'sprite.png', 'vk', );
-$spritesheet-width: 292px;
-$spritesheet-height: 229px;
+$vk: (267px, 219px, -267px, -219px, 22px, 13px, 304px, 283px, 'sprite.png', 'vk', );
+$spritesheet-width: 304px;
+$spritesheet-height: 283px;
 $spritesheet-image: 'sprite.png';
-$spritesheet-sprites: ($breakfast, $city, $complex, $logo-grey, $loupe, $mailru-hover, $mailru, $marker, $ok-hover, $ok, $price-bg, $time, $vegetarian, $vk-hover, $vk, );
-$spritesheet: (292px, 229px, 'sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($breakfast, $city, $complex, $logo-grey-sm, $logo-grey, $loupe-sm, $loupe, $mailru-hover, $mailru-sm-hover, $mailru-sm, $mailru, $marker, $ok-hover, $ok-sm-hover, $ok-sm, $ok, $price-bg, $sandwich, $time-sm, $time, $vegetarian, $vk-hover, $vk-sm-hover, $vk-sm, $vk, );
+$spritesheet: (304px, 283px, 'sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
